@@ -3,6 +3,9 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
 #include "CXMLWriter.h"
+
+#ifdef _IRR_COMPILE_WITH_XML_
+
 #include <wchar.h>
 #include "irrString.h"
 #include "IrrCompileConfig.h"
@@ -20,7 +23,7 @@ CXMLWriter::CXMLWriter(IWriteFile* file)
 	#ifdef _DEBUG
 	setDebugName("CXMLWriter");
 	#endif
-	
+
 	if (File)
 		File->grab();
 }
@@ -78,7 +81,7 @@ void CXMLWriter::writeElement(const wchar_t* name, bool empty,
 		for (int i=0; i<Tabs; ++i)
 			File->write(L"\t", sizeof(wchar_t));
 	}
-	
+
 	// write name
 
 	File->write(L"<", sizeof(wchar_t));
@@ -100,7 +103,7 @@ void CXMLWriter::writeElement(const wchar_t* name, bool empty,
 		File->write(L">", sizeof(wchar_t));
 		++Tabs;
 	}
-	
+
 	TextWrittenLast = false;
 }
 
@@ -117,7 +120,7 @@ void CXMLWriter::writeElement(const wchar_t* name, bool empty,
 		for (int i=0; i<Tabs; ++i)
 			File->write(L"\t", sizeof(wchar_t));
 	}
-	
+
 	// write name
 
 	File->write(L"<", sizeof(wchar_t));
@@ -136,7 +139,7 @@ void CXMLWriter::writeElement(const wchar_t* name, bool empty,
 		File->write(L">", sizeof(wchar_t));
 		++Tabs;
 	}
-	
+
 	TextWrittenLast = false;
 }
 
@@ -188,7 +191,7 @@ void CXMLWriter::writeClosingTag(const wchar_t* name)
 
 
 
-const CXMLWriter::XMLSpecialCharacters XMLWSChar[] = 
+const CXMLWriter::XMLSpecialCharacters XMLWSChar[] =
 {
 	{ L'&', L"&amp;" },
 	{ L'<', L"&lt;" },
@@ -209,7 +212,7 @@ void CXMLWriter::writeText(const wchar_t* text)
 	// Making a member-variable would work, but a lot of memory would stay around after writing.
 	// So the correct solution is probably using fixed block here and always write when that is full.
 	core::stringw s;
-	s.reserve(wcslen(text)+1);	
+	s.reserve(wcslen(text)+1);
 	const wchar_t* p = text;
 
 	while(*p)
@@ -255,3 +258,4 @@ void CXMLWriter::writeLineBreak()
 } // end namespace irr
 } // end namespace io
 
+#endif // _IRR_COMPILE_WITH_XML_
